# sys-audit

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
alembic/: env.py
src/sys_audit/: __init__.py
src/sys_audit/cli/: audit.py  main.py  project.py  report.py  skills.py
src/sys_audit/core/: config.py  orchestrator.py  reporter.py  standalone.py
src/sys_audit/db/: models.py  session.py
src/sys_audit/llm/: client.py
src/sys_audit/skills/: __init__.py  base.py
src/sys_audit/skills/code_quality/: __init__.py  skill.py
