[project]
name = "sys-audit"
version = "0.1.0"
description = "AI-driven codebase quality analysis tool for consultancy handovers"
readme = "README.md"
authors = [
    { name = "Jean-Pierre Bolet", email = "jpbolet.cranes@gmail.com" }
]
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["code-analysis", "audit", "quality", "llm", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    # CLI
    "typer>=0.12.0",
    "rich>=13.7.0",

    # Web API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # LLM
    "httpx>=0.28.0",
    "jinja2>=3.1.0",

    # Code Analysis
    "ruff>=0.8.0",
    "radon>=6.0.0",

    # Utilities
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

security = [
    "bandit>=1.8.0",
    "pip-audit>=2.7.0",
]

[project.scripts]
sys-audit = "sys_audit.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sys_audit"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (needed for FastAPI)
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
